--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
 
 </div>
 
+<div id="legend" class="map-legend">
+    <h3>Legend</h3>
+    <div><span style="background-color: #00FF00;"></span> Rank 1</div>
+    <div><span style="background-color: #ADFF2F;"></span> Rank 2</div>
+    <div><span style="background-color: #FFFF00;"></span> Rank 3</div>
+    <div><span style="background-color: #FFD700;"></span> Rank 4</div>
+    <div><span style="background-color: #FFA500;"></span> Rank 5</div>
+    <div><span style="background-color: #FF8C00;"></span> Rank 6</div>
+    <div><span style="background-color: #FF4500;"></span> Rank 7</div>
+    <div><span style="background-color: #FF0000;"></span> Rank 8</div>
+    <div><span style="background-color: #8B0000;"></span> Rank 9</div>
+    <div><span style="background-color: #800080;"></span> Rank 10</div>
+    <div><span style="background-color: #808080;"></span> No Rank</div>
+</div>
+
+
 
     <!--Mapbox stuff-->
     <script src="script.js"></script>
