--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Housing Navigator</title>
+  <title>CANUE Project</title>
   <!-- mapbox GL JS -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.css' rel='stylesheet' />
@@ -34,6 +34,9 @@
   <!-- Search container positioned to the top right of the map -->
   <div id="my-map" class="map-container">
 
+</div>
+<div id = "Title" class = "map-Title">
+  <h3> CANUE School Rankings </h3>
 </div>
 
 <div id="legend" class="map-legend">
