--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </div>
 <div id = "Title" class = "map-Title">
-  <h3> CANUE School Rankings </h3>
+  CANUE School Rankings
 </div>
 
 <div id="legend" class="map-legend">
